tests/eval/exp/bad/builtin-overflow14.scilla
(* Expected result: Overflow *)
(* Int256.int_min = -57896044618658097711785492504343953926634992332820282019728792003956564819968  *)
let a = Int256 0 in
let b = Int256 -57896044618658097711785492504343953926634992332820282019728792003956564819968 in
builtin sub a b
